--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
 }
-/* Position and sizing of burger button */
 .bm-burger-button {
     position: fixed;
     width: 36px;
@@ -10,17 +9,15 @@
     top: 36px;
   }
   
-  /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: #109fc7;
+    background: #f2f6f7;
+    
   }
   
-  /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
     background: #34337e;
   }
   
-  /* Position and sizing of clickable cross button */
   .bm-cross-button {
     height: 24px;
     width: 24px;
@@ -30,28 +27,24 @@
     background: #090006;
   }
   
-  /*
-  Sidebar wrapper styles
-  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-  */
+
   .bm-menu-wrap {
     position: fixed;
     height: 100%;
   }
   
-  /* General sidebar styles */
   .bm-menu {
     background: #58C9E2;
-    padding: 2.5em 1.5em 0;
+    padding: 2.5em 2em 0;
     font-size: 1.15em;
   }
-  
-  /* Morph shape necessary with bubble or elastic */
+  .avatar{
+    width: 90px;
+  }
   .bm-morph-shape {
     fill: #373a47;
   }
   
-  /* Wrapper for item list */
   .bm-item-list {
     color: #b8b7ad;
     padding: 0.6em;
@@ -66,11 +59,9 @@
     color: #34337e;
   }
   
-  /* Styling of overlay */
   .bm-overlay {
     background: rgba(20, 153, 215, 0.3);
   }
-  /* Individual item */
 .bm-item {
     display: flex;
     font-size: 25px;
