--- a/src/components/popups/editPopup.css
+++ b/src/components/popups/editPopup.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 30;
     width: 70%;
-    height: 100%;
+    height: 23%;
     /* background-color: rgba(0, 0, 0, 0.5); Semi-transparent background */
     display: flex;
     align-items: center;
@@ -30,7 +30,7 @@
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 400px;
+    /* width: 400px; */
   }
   
   .header {
