--- a/src/components/product/category.css
+++ b/src/components/product/category.css
@@ -1,4 +1,3 @@
-/* Global styles */
 body {
   margin: 0;
   padding: 0;
@@ -10,15 +9,15 @@ body {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
-
 .tables {
   margin: 0;
   text-align: center;
   font-size: 30px;
   color: #fff;
   padding: 50px 0;
-  background-color: rgba(0, 242, 255, 0.899);
+  background-color: #7CF3A0;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048),
     0 12.5px 10px rgba(0, 0, 0, 0.06),
