--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -6,7 +6,7 @@
     font-size: 30px;
     color: rgb(27, 136, 231);
 }
-.message{
+.messages{
     text-align: center;
     padding-top: 50%;
     font-size: 30px;
